--- a/public/static/styles.css
+++ b/public/static/styles.css
@@ -1,4 +1,25 @@
 html {
+  margin: 0;
   font-family: 'Helvetica', 'Arial', sans-serif;
   font-size: 14px;
+}
+
+body {
+  margin: 0;
+  background-color: #f0f0f0;
+}
+
+main {
+  max-width: 700px;
+  background-color: #ffffff;
+  margin: 0 auto;
+  padding: 20px 20px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0 0 10px;
+}
+
+.form-element {
+  margin-bottom: 20px;
 }
