Serve downloads, show link in UI

--- a/templates/upload_success.html
+++ b/templates/upload_success.html
@@ -21,6 +21,8 @@
     <p>Patch ID: {{ patch_id }}</p>
 
     <p>Status: <span id="status">(loading)</span></p>
+
+    <p id="download-area"><a href="/downloads/daisy-{{ patch_id }}.bin">Download binary</a></p>
   </main>
 
   <script type="text/javascript">
