--- a/templates/upload_success.html
+++ b/templates/upload_success.html
@@ -20,9 +20,9 @@
 
     <p>Patch ID: {{ patch_id }}</p>
 
-    <p>Status: <span id="status">(loading)</span></p>
+    <p>Status: <span id="status"></span></p>
 
-    <p id="download-area"><a href="/downloads/daisy-{{ patch_id }}.bin">Download binary</a></p>
+    <p id="download-area"><a href="/downloads/daisy-{{ patch_id }}.bin">Download compiled program</a> - You can use the <a href="https://electro-smith.github.io/Programmer/" target="_blank">Daisy Web Programmer</a> to flash the program to your board.</p>
   </main>
 
   <script type="text/javascript">
