--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pd2dsy4web</title>
+  <title>gardener</title>
 
   <link rel="stylesheet" type="text/css" href="/static/styles.css" />
 </head>
@@ -12,7 +12,7 @@
 
   <main>
 
-    <h1>pd2dsy4web</h1>
+    <h1>gardener</h1>
 
     <p>Hello, world!</p>
 
