Handle the correct board types

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,8 +20,11 @@
       <div class="form-element">
         <h2>Board</h2>
         <select name="board">
-          <option value="seed">seed</option>
-          <option value="pod">pod</option>
+          <option value="pod">Pod</option>
+          <option value="patch">Patch</option>
+          <option value="patch_init">patch.Init()</option>
+          <option value="field">Field</option>
+          <option value="petal">Petal</option>
         </select>
       </div>
 
