--- a/public/static/styles.css
+++ b/public/static/styles.css
@@ -1,28 +1,89 @@
+/* Global styles */
+
 html {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: 'Helvetica', 'Arial', sans-serif;
   font-size: 14px;
+  line-height: 1.4;
 }
 
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  background-color: #f0f0f0;
+  background-color: #009900;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 main {
-  max-width: 700px;
+  width: 100%;
+  max-width: 500px;
   background-color: #ffffff;
   margin: 0 auto;
   padding: 20px 20px;
+  border: 20px solid #333333;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 10px;
 }
 
+h1 {
+  font-size: 48px;
+  letter-spacing: -2px;
+}
+
+a:link, a:visited {
+  color: #0000aa;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #0000cc;
+  text-decoration: underline;
+}
+
+/* Home page */
+
+.subtitle {
+  margin: 0 0 20px;
+  padding-bottom: 20px;
+  font-size: 18px;
+  border-bottom: 2px solid #333333;
+}
+
 .form-element {
   margin-bottom: 20px;
 }
+
+#submission {
+  border-top: 2px solid #333333;
+  padding-top: 20px;
+}
+
+#submission input {
+  font-size: 24px;
+  padding: 5px 10px;
+  border: 1px solid #333333;
+  border-radius: 0;
+  cursor: pointer;
+
+  color: #333333;
+  background-color: #eeeeee;
+
+  /* color: #ffffff;
+  background-color: #0000aa; */
+}
+
+#submission input:hover, #submission input:focus {
+  background-color: #dddddd;
+}
+
+/* Patch page */
 
 #download-area {
   display: none;
