--- a/templates/upload_success.html
+++ b/templates/upload_success.html
@@ -14,6 +14,8 @@
 
     <h1><a href="/">gardener</a></h1>
 
+    <p class="subtitle">A web-based UI to convert Pure Data patches for <a href="https://www.electro-smith.com/daisy" target="_blank">Daisy</a> hardware, powered by <a href="https://github.com/electro-smith/pd2dsy" target="_blank">pd2dsy</a>.</p>
+
     <p>Uploaded!</p>
 
     <p>Your file has been uploaded and will build soon.</p>
