--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,11 @@
 
     <p class="subtitle">A web-based UI to convert Pure Data patches for <a href="https://www.electro-smith.com/daisy" target="_blank">Daisy</a> hardware, powered by <a href="https://github.com/electro-smith/pd2dsy" target="_blank">pd2dsy</a>.</p>
 
+    <h2>Upload your patch</h2>
+
     <form action="/upload" method="post" enctype="multipart/form-data">
       <div class="form-element">
-        <h2>Board</h2>
+        <h3>Board</h3>
         <select name="board">
           <option value="pod">Pod</option>
           <option value="patch">Patch</option>
@@ -29,7 +31,7 @@
       </div>
 
       <div class="form-element">
-        <h2>Patch file</h2>
+        <h3>Patch file</h3>
         <input type="file" name="pd_patch" />
       </div>
 
