--- a/templates/upload_success.html
+++ b/templates/upload_success.html
@@ -16,15 +16,17 @@
 
     <p class="subtitle">A web-based UI to convert Pure Data patches for <a href="https://www.electro-smith.com/daisy" target="_blank">Daisy</a> hardware, powered by <a href="https://github.com/electro-smith/pd2dsy" target="_blank">pd2dsy</a>.</p>
 
-    <p>Uploaded!</p>
+    <!-- Patch ID: {{ patch_id }} -->
 
-    <p>Your file has been uploaded and will build soon.</p>
+    <h2>Status: <span id="status">...</span></h2>
 
-    <p>Patch ID: {{ patch_id }}</p>
+    <section id="download" class="download-disabled">
+      <a href="/downloads/daisy-{{ patch_id }}.bin">Download compiled program</a>
+    </section>
 
-    <p>Status: <span id="status"></span></p>
-
-    <p id="download-area"><a href="/downloads/daisy-{{ patch_id }}.bin">Download compiled program</a> - You can use the <a href="https://electro-smith.github.io/Programmer/" target="_blank">Daisy Web Programmer</a> to flash the program to your board.</p>
+    <section id="tips">
+      You can use the <a href="https://electro-smith.github.io/Programmer/" target="_blank">Daisy Web Programmer</a> to flash the program to your board.
+    </section>
   </main>
 
   <script type="text/javascript">
