--- a/templates/about.html
+++ b/templates/about.html
@@ -16,24 +16,13 @@
 
     <p class="subtitle">A web-based UI to convert Pure Data patches for <a href="https://www.electro-smith.com/daisy" target="_blank">Daisy</a> hardware, powered by <a href="https://github.com/electro-smith/pd2dsy" target="_blank">pd2dsy</a>.</p>
 
-    <!-- Patch ID: {{ patch_id }} -->
+    <h2>About gardener</h2>
 
-    <h2>Status: <span id="status">...</span></h2>
+    <p>TODO: content</p>
 
-    <section id="download" class="download-disabled">
-      <a href="/downloads/daisy-{{ patch_id }}.bin">Download compiled program</a>
-    </section>
-
-    <section id="tips">
-      You can use the <a href="https://electro-smith.github.io/Programmer/" target="_blank">Daisy Web Programmer</a> to flash the program to your board.
-    </section>
   </main>
 
   <footer><a href="/about">about gardener</a></footer>
 
-  <script type="text/javascript">
-    window.PATCH_ID = '{{ patch_id }}';
-  </script>
-  <script type="text/javascript" defer src="/static/pollPatchState.js"></script>
 </body>
 </html>
