--- a/templates/about.html
+++ b/templates/about.html
@@ -16,9 +16,7 @@
 
     <p class="subtitle">A web-based UI to convert Pure Data patches for <a href="https://www.electro-smith.com/daisy" target="_blank">Daisy</a> hardware, powered by <a href="https://github.com/electro-smith/pd2dsy" target="_blank">pd2dsy</a>.</p>
 
-    <h2>About gardener</h2>
-
-    <p>TODO: content</p>
+    {{ about_content|safe }}
 
   </main>
 
