Write content for the about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,9 +14,9 @@
 
     <h1><a href="/">gardener</a></h1>
 
-    <p class="subtitle">A web-based UI to convert Pure Data patches for <a href="https://www.electro-smith.com/daisy" target="_blank">Daisy</a> hardware, powered by <a href="https://github.com/electro-smith/pd2dsy" target="_blank">pd2dsy</a>.</p>
-
-    {{ about_content|safe }}
+    <div id="content">
+      {{ about_content|safe }}
+    </div>
 
   </main>
 
