--- a/templates/upload_success.html
+++ b/templates/upload_success.html
@@ -20,6 +20,12 @@
 
     <h2>Status: <span id="status">...</span></h2>
 
+    <section id="error-info" class="hidden">
+      <p id="error-summary"></p>
+
+      <pre id="error-details" class="hidden"></pre>
+    </section>
+
     <section id="download" class="download-disabled">
       <a href="/downloads/daisy-{{ patch_id }}.bin">Download compiled program</a>
     </section>
