Pass custom JSON to compiler

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,18 +27,18 @@
           <option value="patch_init">patch.Init()</option>
           <option value="field">Field</option>
           <option value="petal">Petal</option>
-          <option value="seed_custom_json">Seed with board definition</option>
+          <option value="seed">Seed with board definition</option>
         </select>
       </div>
 
       <div id="board-def-container" class="form-element hidden">
         <h3>Board definition JSON file</h3>
-        <input type="file" name="board_def" />
+        <input type="file" name="board_def" accept=".json" />
       </div>
 
       <div class="form-element">
         <h3>Patch file</h3>
-        <input type="file" name="pd_patch" />
+        <input type="file" name="pd_patch" accept=".pd" />
       </div>
 
       <section id="submission">
