--- a/public/static/styles.css
+++ b/public/static/styles.css
@@ -157,3 +157,28 @@ footer a:hover {
   font-size: 12px;
   line-height: 1.4;
 }
+
+/* Board editor page */
+
+#board-editor-container {
+  background-color: #f0f0f0;
+  margin: 0 4rem;
+  height: 40rem;
+  display: flex;
+  flex-direction: row;
+}
+
+#board-editor-workspace {
+  width: 600px;
+  height: 500px;
+  background-color: white;
+}
+
+#board-editor-json-output {
+  background-color: #f0f0f0;
+  flex-grow: 1;
+  margin-left: 4rem;
+  white-space: pre;
+  font-family: 'Courier New', Courier, monospace;
+  overflow: auto;
+}
