--- a/templates/board_editor.html
+++ b/templates/board_editor.html
@@ -11,8 +11,14 @@
 <body>
 
   <div id="board-editor-container">
-    <div id="board-editor-workspace"></div>
-    <div id="board-editor-json-output"></div>
+    <div id="board-editor-left">
+      <h3>Editor</h3>
+      <div id="board-editor-workspace"></div>
+    </div>
+    <div id="board-editor-right">
+      <h3>JSON output</h3>
+      <div id="board-editor-json-output"></div>
+    </div>
   </div>
 
   <script src="https://unpkg.com/blockly/blockly.min.js"></script>
